--- a/ludofrontend/src/default.css
+++ b/ludofrontend/src/default.css
@@ -685,15 +685,25 @@ flex-direction: column;
 }
 
 .pawn-2{
-  bottom: 0.2rem;
+  bottom: 0.3rem;
   left: 0.2rem;
   z-index: 2;
 }
 
 .pawn-3{
-  bottom: 0.4rem;
+  bottom: 0.6rem;
   left: 0.4rem;
   z-index: 3;
+}
+.pawn-4{
+  bottom: 0.8rem;
+  left: 0.6rem;
+  z-index: 4;
+}
+.pawn-5{
+  bottom: 1.0rem;
+  left: 0.8rem;
+  z-index: 5;
 }
 
 .board-container .middle-winner{
