--- a/ludofrontend/src/default.css
+++ b/ludofrontend/src/default.css
@@ -682,27 +682,54 @@ flex-direction: column;
   height: 75%;
   border-radius: 50%;
   z-index: 1;
+  bottom: -0.4rem;
+  left: -0.4rem;
 }
 
 .pawn-2{
-  bottom: 0.3rem;
-  left: 0.2rem;
+  bottom: -0.2rem;
+  left: -0.2rem;
   z-index: 2;
 }
 
 .pawn-3{
-  bottom: 0.6rem;
-  left: 0.4rem;
+  bottom: 0rem;
+  left: 0rem;
   z-index: 3;
 }
 .pawn-4{
-  bottom: 0.8rem;
-  left: 0.6rem;
+  bottom: 0.2rem;
+  left: 0.2rem;
   z-index: 4;
 }
 .pawn-5{
-  bottom: 1.0rem;
+  bottom: 0.4rem;
+  left: 0.4rem;
+  z-index: 5;
+}
+.pawn-6{
+  bottom: 0.6rem;
+  left: 0.6rem;
+  z-index: 5;
+}
+.pawn-7{
+  bottom: 0.8rem;
   left: 0.8rem;
+  z-index: 5;
+}
+.pawn-8{
+  bottom: 1.0rem;
+  left: 1.0rem;
+  z-index: 5;
+}
+.pawn-9{
+  bottom: 1.2rem;
+  left: 1.2rem;
+  z-index: 5;
+}
+.pawn-10{
+  bottom: 1.4rem;
+  left: 1.4rem;
   z-index: 5;
 }
 
