--- a/ludofrontend/src/default.css
+++ b/ludofrontend/src/default.css
@@ -98,6 +98,7 @@ html {
   --bodyFont: "Nunito", sans-serif;
   --small-text: 0.875rem;
   --extra-small-text: 0.7em;
+  --large-text: 1.5rem;
 
   /* box shadow*/
   --card-shadow: 1px 3px 12px 5px black;
@@ -677,6 +678,14 @@ flex-direction: column;
   border-radius: 50%;
 }
 
+.pawn{
+  border-radius: 50%;
+  margin: 0;
+  padding: auto;
+  height: 2rem;
+  width: 2rem;
+}
+
 .pawn-1{
   padding: 0;
   position: absolute;
@@ -757,10 +766,6 @@ flex-direction: column;
 }
 
 
-.info-container{
-  width: 100%;
-}
-
 /* ==================
 VISUALIZER
 ================== */
@@ -778,12 +783,91 @@ VISUALIZER
   row-gap: 1rem;
 }
 
+
 .runs{
   display: flex;
   flex-direction: column;
+  row-gap: 0.2rem;
+}
+
+
+.info-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+
+
+.step-container{
+  padding: 0 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  column-gap: 2rem;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--large-text);
+}
+.step-icons{
+  cursor: pointer
+}
+
+.players-container{
+  padding: 0 1rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 5rem;
   row-gap: 0.5rem;
 }
 
+.player-container{
+  padding: 0.2rem 0.5rem;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 1rem;
+  align-items: center;
+}
+
+.player-container span{
+  font-size: var(--large-text);
+}
+
+.player-container h4{
+  font-size: calc(var(--large-text) + 0.5rem);
+}
+
+.current-player{
+  border: 0.2rem solid var(--notification-red);
+}
+.winner-player{
+  border: 0.2rem solid var(--notification-green);
+}
+
+
+.roll-num-container{
+  padding: 0 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  column-gap: 5rem;
+  justify-content: center;
+  font-size: var(--large-text);
+}
+
+
+.move-taken-container{
+  padding: 0 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 5rem;
+  font-size: var(--large-text);
+}
 
 .cam-feed-container{
   display: flex;
