- Actor: Revived MCTS - Actor2: Updated Softmax - MCTS: Taking care of next states as current player while calculating backup value - Evaluator: Removed Predict - Learner: Updated Hyperparameters - Initializer: Updated network - Train Server: Updated Hyperparameters - Web Server: Some debugging - Ludo: Fixed a bug in num_more_moves

--- a/ludofrontend/src/default.css
+++ b/ludofrontend/src/default.css
@@ -603,6 +603,7 @@ BOARD
 .board-container{
   min-width: 90vh;
   min-height: 90vh;
+  max-height: 90vh;
   overflow: hidden;
   background-color: white;
   display: grid;
